tests/some-site/home_automation/home_assistant/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "name": "home-assistant"
  "template":
    "metadata":
      "labels":
        "name": "home-assistant"
    "spec":
      "containers":
      - "command":
        - "python3"
        - "-m"
        - "homeassistant"
        - "--config"
        - "/config"
        "image": "homeassistant/home-assistant:2024.12"
        "livenessProbe":
          "httpGet":
            "port": 8123
          "initialDelaySeconds": 600
        "name": "home-assistant"
        "securityContext":
          "privileged": true
        "volumeMounts":
        - "mountPath": "/config"
          "name": "config"
      "dnsPolicy": "ClusterFirstWithHostNet"
      "hostNetwork": true
      "nodeSelector":
        "kubernetes.io/hostname": "rpi-living"
      "volumes":
      - "hostPath":
          "path": "/data/home-assistant"
        "name": "config"
