tests/some-site/home_automation/home_assistant/ingress.yaml
"apiVersion": "networking.k8s.io/v1"
"kind": "Ingress"
"metadata":
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "rules":
  - "host": "home.example.com"
    "http":
      "paths":
      - "backend":
          "service":
            "name": "home-assistant"
            "port":
              "number": 8123
        "path": "/"
        "pathType": "Prefix"
