tests/some-site/home_automation/home_assistant/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "home-assistant"
  "namespace": "home-assistant"
"spec":
  "ports":
  - "name": "http"
    "port": 8123
    "targetPort": 8123
  "selector":
    "name": "home-assistant"
